--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@ SESSION_DRIVER=file
 MAIL_DRIVER=mail
 MAIL_HOST=smtp.mandrillapp.com
 MAIL_PORT=587
-MAIL_USERNAME=nsnajibullah@gmail.com
+MAIL_USERNAME=mobilevoucher@uginnovate.com
 MAIL_PASSWORD=myapikey
+
+
 
