update env file

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_KEY=base64:J53OubxyUSH88yuJVF4hSwjSw7cKLSzQADsvCyG6urA=
 DB_HOST=localhost
 DB_DATABASE=mvoucherv3
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=12345
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
