update2 env file

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-APP_ENV=local
+APP_ENV=production
 APP_DEBUG=true
 APP_KEY=base64:J53OubxyUSH88yuJVF4hSwjSw7cKLSzQADsvCyG6urA=
 
 DB_HOST=localhost
-DB_DATABASE=mvoucherv3
-DB_USERNAME=root
-DB_PASSWORD=12345
+DB_DATABASE=laravelbase
+DB_USERNAME=forge
+DB_PASSWORD=H7EZfd9gPUwwyIclInDa
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
