--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=67.205.149.2
+DB_PORT=
 DB_DATABASE=laravelbase
 DB_USERNAME=forge
 DB_PASSWORD=H7EZfd9gPUwwyIclInDa
